@@ -167,7 +167,7 @@ CG_ParseScores
 static void CG_ParseScore( team_t team ) {
 	int		i, j, powerups;
 	int		numScores;
-	int		offset, rows;
+	int		offset, columns;
 
 	if( team == TEAM_AXIS ) {
 		cg.numScores = 0;
@@ -187,19 +187,19 @@ static void CG_ParseScore( team_t team ) {
 		i = cg.numScores;
 
 		// pheno: added misc score flags with etpub >= 0.9.0
-		rows = cgs.etpub >= ETPUB_VERSION( 0, 9, 0 ) ? 8 : 7;
+		columns = cgs.etpub >= ETPUB_VERSION( 0, 9, 0 ) ? 8 : 7;
 
-		cg.scores[i].client = atoi(			CG_Argv( offset + 0 + ( j * rows ) ) );
-		cg.scores[i].score = atoi(			CG_Argv( offset + 1 + ( j * rows ) ) );
-		cg.scores[i].ping = atoi(			CG_Argv( offset + 2 + ( j * rows ) ) );
-		cg.scores[i].time = atoi(			CG_Argv( offset + 3 + ( j * rows ) ) );
-		powerups = atoi(					CG_Argv( offset + 4 + ( j * rows ) ) );
-		cg.scores[i].playerClass = atoi(	CG_Argv( offset + 5 + ( j * rows ) ) );
-		cg.scores[i].respawnsLeft = atoi(	CG_Argv( offset + 6 + ( j * rows ) ) );
+		cg.scores[i].client = atoi(				CG_Argv( offset + 0 + ( j * columns ) ) );
+		cg.scores[i].score = atoi(				CG_Argv( offset + 1 + ( j * columns ) ) );
+		cg.scores[i].ping = atoi(				CG_Argv( offset + 2 + ( j * columns ) ) );
+		cg.scores[i].time = atoi(				CG_Argv( offset + 3 + ( j * columns ) ) );
+		powerups = atoi(						CG_Argv( offset + 4 + ( j * columns ) ) );
+		cg.scores[i].playerClass = atoi(		CG_Argv( offset + 5 + ( j * columns ) ) );
+		cg.scores[i].respawnsLeft = atoi(		CG_Argv( offset + 6 + ( j * columns ) ) );
 		
 		// pheno: parse misc score flags
 		if( cgs.etpub >= ETPUB_VERSION( 0, 9, 0 ) ) {
-			cg.scores[i].miscScoreFlags = atoi(	CG_Argv( offset + 7 + ( j * rows ) ) );
+			cg.scores[i].miscScoreFlags = atoi(	CG_Argv( offset + 7 + ( j * columns ) ) );
 		} else {
 			cg.scores[i].miscScoreFlags = 0;
 		}
