@@ -2043,3 +2043,5 @@
            intermission
 * pheno:   reworked the way how ready state was sent to the client
 * pheno:   removed weapon auto switching on enabled panzerwar mode
+* pheno:   fixed a bug where the players loose their ready icon if they die in
+           warmup
